# audio-wasm

./: Cargo.toml  README.md  index.html  styles.css
js/: main.js
js/audio/: audioController.js
js/effects/: effectPresets.js  effectsController.js
js/storage/: s3Handler.js
js/ui/: uiController.js
js/utils/: logger.js
pkg/: audio_transcriber.d.ts  audio_transcriber.js  audio_transcriber_bg.wasm  audio_transcriber_bg.wasm.d.ts  package.json
src/: lib.rs
