[package]
name = "audio-transcriber"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "Navigator",
    "Window",
    "MediaRecorder",
    "BlobEvent",
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AudioWorklet",
    "AudioWorkletNode",
    "Response",
    "Blob",
    "Url",
    "console"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
